--- a/native_client/SConstruct
+++ b/native_client/SConstruct
@@ -2789,7 +2789,7 @@ def MakeSgxEnv():
       'src/trusted/service_runtime/build.scons',
       'src/trusted/validator_x86/build.scons',
       'src/nonsfi/irt/build.scons',
-      #'src/nonsfi/loader/build.scons',
+      'src/nonsfi/loader/build.scons',
       #'src/third_party/gtest/build.scons',
       
       #'src/trusted/debug_stub/build.scons',
