--- a/native_client/SConstruct
+++ b/native_client/SConstruct
@@ -2787,7 +2787,7 @@ def MakeSgxEnv():
       ##'src/trusted/debug_stub/build.scons',
       
       # TODO(mkpark) I'm not sure the below
-      #'src/trusted/desc/build.scons',
+      'src/trusted/desc/build.scons',
       'src/trusted/fault_injection/build.scons',
       'src/trusted/interval_multiset/build.scons',
       'src/trusted/nacl_base/build.scons',
