--- a/native_client/SConstruct
+++ b/native_client/SConstruct
@@ -2792,9 +2792,9 @@ def MakeSgxEnv():
       'src/trusted/interval_multiset/build.scons',
       'src/trusted/nacl_base/build.scons',
       'src/trusted/perf_counter/build.scons',
-      #'src/trusted/validator/build.scons', 
+      'src/trusted/validator/build.scons', 
       #'src/trusted/validator/driver/build.scons',
-      #'src/trusted/validator_ragel/build.scons',
+      'src/trusted/validator_ragel/build.scons',
       'src/trusted/validator_x86/build.scons',
       #'src/trusted/platform_qualify/build.scons',
       'src/trusted/service_runtime/build.scons',
